--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="warn" >
   <div class="container text-center" >
     <a class="mx-2"  routerLink="/process" routerLinkActive="active"  >arNLP</a>
-    <a class="mx-2" routerLink="/asag" routerLinkActive="active"  >ASAG</a>
+    <a class="mx-2" routerLink="/addtemplate" routerLinkActive="active"  >ASAG</a>
   </div>
 </mat-toolbar>
