--- a/src/app/components/asag/load-template/load-template.component.html
+++ b/src/app/components/asag/load-template/load-template.component.html
@@ -1,1 +1,1 @@
-<app-default-template  [asag_request]="asag_request" [newTemplateInfo]="newTemplateInfo"  [btnBAddTemplateisDisabled]="true" [btnBackisDisabled]="true" ></app-default-template>
+<app-default-template [btnSubmitisDisabled]="submited"  [asag_request]="asag_request" [newTemplateInfo]="newTemplateInfo"  [btnBAddTemplateisDisabled]="true" [btnBackisDisabled]="true" ></app-default-template>
