--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,7 @@
-<mat-toolbar color="warn" >
+<mat-toolbar color="warn"  >
   <div class="container text-center" >
-    <a class="mx-2"  routerLink="/process" routerLinkActive="active"  >arNLP</a>
+    <a class="mx-2"  routerLink="/home" routerLinkActive="active" text-right  >Home</a>
+    <a class="mx-2"  routerLink="/process" routerLinkActive="active" text-right  >arNLP</a>
     <a class="mx-2" routerLink="/addtemplate" routerLinkActive="active"  >ASAG</a>
   </div>
 </mat-toolbar>
